force-app/main/default/objects/Case/fields/N_PGT_ASSAY__c.field-meta.xml
<CustomField>
    <fullName>N_PGT_ASSAY__c</fullName>
    <description>Record the number of embryos that underwent any form of PGT (including PGT-A or PGT-D) and met any of the following criteria:
1.   Embryos fertilised in the cycle and biopsied
2.   Embryos thawed in the cycle and biopsied
Include an embryo in N_PGT_ASSAY if a biopsy was performed, even if testing did not follow.</description>
    <label>ANZARD - Number of embryos biopsied for</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>