force-app/main/default/objects/Case/fields/N_PGT_ET__c.field-meta.xml
<CustomField>
    <fullName>N_PGT_ET__c</fullName>
    <description>Determine whether any form of PGT was done on any embryo transferred in the cycle.</description>
    <label>ANZARD - Number of PGT embryos transferr</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>