force-app/main/default/objects/Case/fields/N_PGT_TH__c.field-meta.xml
<CustomField>
    <fullName>N_PGT_TH__c</fullName>
    <description>Record the number of embryos thawed in this cycle that underwent any form of PGT in a previous cycle.</description>
    <label>ANZARD - Number of embryos thawed that h</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>