force-app/main/default/objects/Case/fields/N_S_BLTH__c.field-meta.xml
<CustomField>
    <fullName>N_S_BLTH__c</fullName>
    <defaultValue>0</defaultValue>
    <description>ANZARD defines a blastocyst as an embryo that is five to six days old, after fertilisation.
For embryo recipient cycles, use this data item to record the number of received, slow frozen blastocysts being thawed in the cycle. If fresh embryos were received, use N_EMBREC_FRESH data item instead.</description>
    <label>ANZARD - Number of slow frozen blastocys</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>