force-app/main/default/objects/Case/fields/N_S_CLTH__c.field-meta.xml
<CustomField>
    <fullName>N_S_CLTH__c</fullName>
    <defaultValue>0</defaultValue>
    <description>ANZARD defines a cleavage embryo as an embryo that is one to four days old, after fertilisation. For embryo recipient cycles, use this data item to record the number of received, slow frozen cleavage- stage embryos being thawed in the cycle. If fresh embryos were received, use N_EMBREC_FRESH data item instead.</description>
    <label>ANZARD - Number of slow frozen cleavage-</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>