force-app/main/default/objects/Case/fields/N_S_EGTH__c.field-meta.xml
<CustomField>
    <fullName>N_S_EGTH__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Record the number of slow frozen oocytes thawed in this cycle.
For oocyte recipient cycles, use this data item to record the number of received cryopreserved oocytes being thawed in this cycle. If fresh oocytes are received, use the N_EGGREC_FRESH data item
instead.</description>
    <label>ANZARD - Number of slow frozen oocytes t</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>