force-app/main/default/objects/Case/fields/N_V_EGTH__c.field-meta.xml
<CustomField>
    <fullName>N_V_EGTH__c</fullName>
    <description>Record the number of vitrified oocytes warmed in this cycle. For oocyte recipient cycles, use this data item to record the number of received cryopreserved oocytes being warmed in this cycle. If fresh oocytes are received, use the N_EGGREC_FRESH data item instead.</description>
    <label>ANZARD - Number of vitrified oocytes war</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>