force-app/main/default/objects/Case/fields/Next_Pregnancy_Test_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Pregnancy_Test_Date__c</fullName>
    <label>Next Pregnancy Test Date</label>
    <type>Date</type>
</CustomField>