force-app/main/default/objects/Case/fields/NI_PGT_ASSAY__c.field-meta.xml
<CustomField>
    <fullName>NI_PGT_ASSAY__c</fullName>
    <label>ANZARD - # PGT Media Samples Collected</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>