force-app/main/default/objects/Case/fields/NI_PGT_ET__c.field-meta.xml
<CustomField>
    <fullName>NI_PGT_ET__c</fullName>
    <label>ANZARD - # of NIPGT Transferred</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>