force-app/main/default/objects/Case/fields/NI_PGT_TH__c.field-meta.xml
<CustomField>
    <fullName>NI_PGT_TH__c</fullName>
    <label>ANZARD - Number NIPGT Embryos Thawed</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>