force-app/main/default/objects/Case/fields/Not_Started_Reason__c.field-meta.xml
<CustomField>
    <fullName>Not_Started_Reason__c</fullName>
    <label>Not Started Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Patient changed mind/decided to wait more time</fullName>
            </value>
            <value>
                <fullName>Patient pregnant naturally</fullName>
            </value>
            <value>
                <fullName>Cost concerns</fullName>
            </value>
            <value>
                <fullName>Patient unwell</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>