force-app/main/default/objects/Case/fields/NPGT_ASSAY__c.field-meta.xml
<CustomField>
    <fullName>NPGT_ASSAY__c</fullName>
    <label>NPGT_ASSAY</label>
    <summarizedField>Cycle_Event__c.Number_of_Embryos_Biopsied__c</summarizedField>
    <summaryForeignKey>Cycle_Event__c.Cycle__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>