force-app/main/default/objects/Case/fields/Number_of_Embryos_Biopsied__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Embryos_Biopsied__c</fullName>
    <label>Number of Embryos Biopsied</label>
    <summarizedField>Cycle_Event__c.Number_of_Embryos_Biopsied__c</summarizedField>
    <summaryForeignKey>Cycle_Event__c.Cycle__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>