force-app/main/default/objects/Case/fields/Number_of_Embryos_for_Transfer__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Embryos_for_Transfer__c</fullName>
    <label>Number of Embryos for Transfer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>One</fullName>
            </value>
            <value>
                <fullName>Two</fullName>
            </value>
            <value>
                <fullName>Nil</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>