force-app/main/default/objects/Case/fields/OPU_Cycle_Event_Created__c.field-meta.xml
<CustomField>
    <fullName>OPU_Cycle_Event_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>OPU Cycle Event Created</label>
    <type>Checkbox</type>
</CustomField>