force-app/main/default/objects/Case/fields/OPU_DATE__c.field-meta.xml
<CustomField>
    <fullName>OPU_DATE__c</fullName>
    <description>Record the date when oocyte pickup occurred in the current cycle.</description>
    <label>ANZARD - The date when oocyte pickup occ</label>
    <type>Date</type>
</CustomField>