force-app/main/default/objects/Case/fields/OPU_Date_Formula__c.field-meta.xml
<CustomField>
    <fullName>OPU_Date_Formula__c</fullName>
    <label>OPU Date Formula</label>
    <summarizedField>Cycle_Event__c.Procedure_Date_Time__c</summarizedField>
    <summaryFilterItems>
        <field>Cycle_Event__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>OPU</value>
    </summaryFilterItems>
    <summaryForeignKey>Cycle_Event__c.Cycle__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>