force-app/main/default/objects/Case/fields/OV_STIM__c.field-meta.xml
<CustomField>
    <fullName>OV_STIM__c</fullName>
    <description>Indicate whether this is an FSH stimulated cycle or not.
Do not answer ‘y’ if clomiphene or hCG alone unless FSH was also administered.</description>
    <label>ANZARD - Ovarian stimulation via follicl</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ANZARD_NO_YES_UNKNOWN</valueSetName>
    </valueSet>
</CustomField>