force-app/main/default/objects/Case/fields/PARENT_SEX__c.field-meta.xml
<CustomField>
    <fullName>PARENT_SEX__c</fullName>
    <description>Record the sex at birth, not the gender identification, of the intending parents.</description>
    <label>ANZARD - Sex of intending parents</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 = Female-male couple</fullName>
            </value>
            <value>
                <fullName>2 = Single female</fullName>
            </value>
            <value>
                <fullName>3 = Female-female couple</fullName>
            </value>
            <value>
                <fullName>4 = Single male</fullName>
            </value>
            <value>
                <fullName>5 = Male-male couple</fullName>
            </value>
            <value>
                <fullName>6 = Unknown – only for use in egg donation cycles to unknown intending parents</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>