force-app/main/default/objects/Case/fields/Partner_Birthdate_as_Text__c.field-meta.xml
<CustomField>
    <fullName>Partner_Birthdate_as_Text__c</fullName>
    <formula>TEXT(DAY(Contact.Partner__r.Birthdate)) &amp; &quot;/&quot; &amp; TEXT(MONTH(Contact.Partner__r.Birthdate)) &amp; &quot;/&quot; &amp; TEXT(YEAR(Contact.Partner__r.Birthdate))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Partner Birthdate as Text</label>
    <type>Text</type>
</CustomField>