force-app/main/default/objects/Case/fields/PAT_ID__c.field-meta.xml
<CustomField>
    <fullName>PAT_ID__c</fullName>
    <description>Site-issued unique patient identifier used by RTAC and the NPESU for data verification and auditing purposes.</description>
    <label>ANZARD - Patient’s ID/Medical Record Num</label>
    <length>20</length>
    <type>Text</type>
</CustomField>