force-app/main/default/objects/Case/fields/Patient_Birthdate_as_Text__c.field-meta.xml
<CustomField>
    <fullName>Patient_Birthdate_as_Text__c</fullName>
    <formula>TEXT(DAY(Contact.Birthdate)) &amp; &quot;/&quot; &amp; TEXT(MONTH(Contact.Birthdate)) &amp; &quot;/&quot; &amp; TEXT(YEAR(Contact.Birthdate))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Patient Birthdate as Text</label>
    <type>Text</type>
</CustomField>