force-app/main/default/objects/Case/fields/Patient_BMI__c.field-meta.xml
<CustomField>
    <fullName>Patient_BMI__c</fullName>
    <formula>Contact.BMI__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Patient BMI</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>