force-app/main/default/objects/Case/fields/Patient_Email__c.field-meta.xml
<CustomField>
    <fullName>Patient_Email__c</fullName>
    <formula>Contact.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Patient Email as Text</label>
    <type>Text</type>
</CustomField>