force-app/main/default/objects/Case/fields/Patient_Pregnant_Date__c.field-meta.xml
<CustomField>
    <fullName>Patient_Pregnant_Date__c</fullName>
    <label>Patient Pregnant Date</label>
    <type>Date</type>
</CustomField>