force-app/main/default/objects/Case/fields/Patient_Weight_at_Cycle_Start__c.field-meta.xml
<CustomField>
    <fullName>Patient_Weight_at_Cycle_Start__c</fullName>
    <label>Patient Weight at Cycle Start</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>