force-app/main/default/objects/Case/fields/Payment_Made__c.field-meta.xml
<CustomField>
    <fullName>Payment_Made__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Payment Made?</label>
    <type>Checkbox</type>
</CustomField>