force-app/main/default/objects/Case/fields/PBS_as_Text__c.field-meta.xml
<CustomField>
    <fullName>PBS_as_Text__c</fullName>
    <formula>TEXT(PBS_Eligibility__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PBS as Text</label>
    <type>Text</type>
</CustomField>