force-app/main/default/objects/Case/fields/PBS_Eligibility__c.field-meta.xml
<CustomField>
    <fullName>PBS_Eligibility__c</fullName>
    <label>PBS Eligibility</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PBS Cycle</fullName>
            </value>
            <value>
                <fullName>Non-PBS Cycle</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>