force-app/main/default/objects/Case/fields/PCOS__c.field-meta.xml
<CustomField>
    <fullName>PCOS__c</fullName>
    <description>Whether the female intending parent (where PARENT_SEX is female-male couple) has PCOS, regardless of whether it is contributing to infertility or not.</description>
    <label>ANZARD - Whether the female intending pa</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ANZARD_NO_YES_UNKNOWN</valueSetName>
    </valueSet>
</CustomField>