force-app/main/default/objects/Case/fields/PGT_REASON__c.field-meta.xml
<CustomField>
    <fullName>PGT_REASON__c</fullName>
    <description>If PGT was performed, specify the primary reason for performing PGT.</description>
    <label>ANZARD - Why PGT was performed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 = Aneuploidy screening</fullName>
            </value>
            <value>
                <fullName>2 = Single gene variation</fullName>
            </value>
            <value>
                <fullName>3 = Chromosomal structural rearrangements (e.g. translocations)</fullName>
            </value>
            <value>
                <fullName>4 = Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>