force-app/main/default/objects/Case/fields/PGT_Requested__c.field-meta.xml
<CustomField>
    <fullName>PGT_Requested__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PGT Requested?</label>
    <type>Checkbox</type>
</CustomField>