force-app/main/default/objects/Case/fields/PGT_Type__c.field-meta.xml
<CustomField>
    <fullName>PGT_Type__c</fullName>
    <label>PGT Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Genetic Testing</fullName>
            </value>
            <value>
                <fullName>PGT-A</fullName>
            </value>
            <value>
                <fullName>PGT-M</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>