force-app/main/default/objects/Case/fields/POSTCODE__c.field-meta.xml
<CustomField>
    <fullName>POSTCODE__c</fullName>
    <description>If the patient resides in Australia, record their residential postcode.
If the patient resides in New Zealand, record “NZ”
If the patient resides in neither Australia nor New Zealand, record the name of their usual country of residence.</description>
    <label>ANZARD - The female patient’s residentia</label>
    <length>56</length>
    <type>Text</type>
</CustomField>