force-app/main/default/objects/Case/fields/PR_CLIN__c.field-meta.xml
<CustomField>
    <fullName>PR_CLIN__c</fullName>
    <description>A clinical pregnancy must fulfil at least one of the following criteria:
1. Pregnancy known to be ongoing at 20 weeks
2. Evidence by ultrasound of an intrauterine sac and/or fetal heart.
3. Examination of products of conception reveal chorionic villi
4.  A definite ectopic pregnancy that has been diagnosed laparoscopically or by ultrasound</description>
    <label>ANZARD - Clinical pregnancy</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>n = No</fullName>
            </value>
            <value>
                <fullName>y = Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>