force-app/main/default/objects/Case/fields/PR_ECTOP__c.field-meta.xml
<CustomField>
    <fullName>PR_ECTOP__c</fullName>
    <description>Determine whether the pregnancy is an ectopic pregnancy or a heterotopic pregnancy.</description>
    <label>ANZARD - Ectopic pregnancy</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>n = neither ectopic nor heterotopic</fullName>
                <default>true</default>
                <label>n = neither ectopic nor heterotopic</label>
            </value>
            <value>
                <fullName>e = ectopic</fullName>
            </value>
            <value>
                <fullName>h = heterotopic</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>