force-app/main/default/objects/Case/fields/PR_END_DT__c.field-meta.xml
<CustomField>
    <fullName>PR_END_DT__c</fullName>
    <description>The end of a pregnancy includes delivery, miscarriage or termination.</description>
    <label>ANZARD - Date pregnancy ended</label>
    <type>Date</type>
</CustomField>