force-app/main/default/objects/Case/fields/PR_REDUC__c.field-meta.xml
<CustomField>
    <fullName>PR_REDUC__c</fullName>
    <description>Determine whether selective reduction was performed.
If it was performed, provide details about reasons in the ABN_LESS data item.</description>
    <label>ANZARD - Selective reduction performed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>n = No</fullName>
            </value>
            <value>
                <fullName>y = Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>