force-app/main/default/objects/Case/fields/PR_TOP__c.field-meta.xml
<CustomField>
    <fullName>PR_TOP__c</fullName>
    <description>Determine whether the female patient elected to terminate the pregnancy for any reason.
Provide details about reason for elective termination in the ABN_LESS data item.
Do not consider a planned fetal reduction in a multiple pregnancy subsequently resulting in an unintended miscarriage, as an elective termination of pregnancy.
Do not consider a pregnancy where there has been an intrauterine fetal death (IUFD) which required induced delivery, as an elective termination of pregnancy.</description>
    <label>ANZARD - Elective termination of pregnan</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>n = No</fullName>
            </value>
            <value>
                <fullName>y = Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>