force-app/main/default/objects/Case/fields/PREG_20W__c.field-meta.xml
<CustomField>
    <fullName>PREG_20W__c</fullName>
    <description>Determine if the female patient has previously had any pregnancies of 20 weeks or more gestation regardless if by fertility treatment or with a different partner.</description>
    <label>ANZARD - Pregnancies of twenty weeks or</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ANZARD_NO_YES_UNKNOWN</valueSetName>
    </valueSet>
</CustomField>