force-app/main/default/objects/Case/fields/Prescribed_Transfer_Type__c.field-meta.xml
<CustomField>
    <fullName>Prescribed_Transfer_Type__c</fullName>
    <label>Prescribed Transfer Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Embryo Transfer</fullName>
            </value>
            <value>
                <fullName>Freeze All</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>