force-app/main/default/objects/Case/fields/Price_Type__c.field-meta.xml
<CustomField>
    <fullName>Price_Type__c</fullName>
    <label>Price Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Full Price</fullName>
            </value>
            <value>
                <fullName>Bulk Billed</fullName>
            </value>
            <value>
                <fullName>Discounted by Number</fullName>
                <label>Full Price Discounted by Number</label>
            </value>
            <value>
                <fullName>Freeze All</fullName>
            </value>
            <value>
                <fullName>Discount IUI</fullName>
            </value>
            <value>
                <fullName>Medical Egg Freeze</fullName>
            </value>
            <value>
                <fullName>Defence</fullName>
            </value>
            <value>
                <fullName>Discounted by Percentage</fullName>
                <isActive>false</isActive>
                <label>Discounted by Percentage</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>