force-app/main/default/objects/Case/fields/Protocol_Name_As_Text__c.field-meta.xml
<CustomField>
    <fullName>Protocol_Name_As_Text__c</fullName>
    <formula>Linked_Protocol__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Protocol Name</label>
    <type>Text</type>
</CustomField>