force-app/main/default/objects/Case/fields/Referring_Doctor__c.field-meta.xml
<CustomField>
    <fullName>Referring_Doctor__c</fullName>
    <formula>Contact.Current_Referral__r.Referring_Doctor__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Referring Doctor</label>
    <type>Text</type>
</CustomField>