force-app/main/default/objects/Case/fields/Result_Table__c.field-meta.xml
<CustomField>
    <fullName>Result_Table__c</fullName>
    <label>Result Table</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>