force-app/main/default/objects/Case/fields/SP_QUAL__c.field-meta.xml
<CustomField>
    <fullName>SP_QUAL__c</fullName>
    <description>Concentration of sperm in either ejaculated sample used for fertilisation or the most recent NATA analysis, measured in millions per millilitre (x106/ml).</description>
    <label>ANZARD - Semen quality</label>
    <precision>5</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>