force-app/main/default/objects/Case/fields/SP_QUAL_RollUp__c.field-meta.xml
<CustomField>
    <fullName>SP_QUAL_RollUp__c</fullName>
    <label>SP_QUAL</label>
    <summarizedField>Cycle_Event__c.Initial_Concentration__c</summarizedField>
    <summaryForeignKey>Cycle_Event__c.Cycle__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>