force-app/main/default/objects/Case/fields/SP_SITE__c.field-meta.xml
<CustomField>
    <fullName>SP_SITE__c</fullName>
    <description>Indicate the anatomical site of the sperm from which the sperm was extracted.</description>
    <label>ANZARD - Site of sperm used</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>e</fullName>
            </value>
            <value>
                <fullName>t</fullName>
            </value>
            <value>
                <fullName>p</fullName>
            </value>
            <value>
                <fullName>o</fullName>
            </value>
            <value>
                <fullName>u</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>