force-app/main/default/objects/Case/fields/SP_SOURCE__c.field-meta.xml
<CustomField>
    <fullName>SP_SOURCE__c</fullName>
    <description>Source of sperm in cycles where fertilisation is attempted, or an embryo is thawed.</description>
    <label>ANZARD - Source of sperm</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1= A male intending parent</fullName>
            </value>
            <value>
                <fullName>2= A sperm donor outside of the intending parents</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>