force-app/main/default/objects/Case/fields/Sperm_Preparation_Cycle_Event_Created__c.field-meta.xml
<CustomField>
    <fullName>Sperm_Preparation_Cycle_Event_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sperm Preparation Cycle Event Created</label>
    <type>Checkbox</type>
</CustomField>