force-app/main/default/objects/Case/fields/Status_of_Last_Cycle__c.field-meta.xml
<CustomField>
    <fullName>Status_of_Last_Cycle__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Status of Last Cycle</label>
    <type>Checkbox</type>
</CustomField>