force-app/main/default/objects/Case/fields/STIM_1ST__c.field-meta.xml
<CustomField>
    <fullName>STIM_1ST__c</fullName>
    <description>Determine whether this is the female patient’s first ever FSH stimulated cycle with the intention of OPU (consider all treatments the female patient has had at other clinics or in other countries).
Do not consider any previous FSH stimulated artificial insemination cycles.</description>
    <label>ANZARD - First ever FSH stimulated cycle</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>n = No; pt has had or attempted OPU previously</fullName>
            </value>
            <value>
                <fullName>y = Yes, first ever attempt at OPU</fullName>
            </value>
            <value>
                <fullName>u = Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>