force-app/main/default/objects/Case/fields/Sub_Status__c.field-meta.xml
<CustomField>
    <fullName>Sub_Status__c</fullName>
    <label>Sub Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Waiting to Start</fullName>
                <default>true</default>
                <label>Waiting to Start</label>
            </value>
            <value>
                <fullName>In Cycle</fullName>
            </value>
            <value>
                <fullName>WFPR</fullName>
            </value>
            <value>
                <fullName>Awaiting Live Birth</fullName>
            </value>
            <value>
                <fullName>Awaiting Clinical Pregnancy</fullName>
            </value>
            <value>
                <fullName>Cycle Closed</fullName>
            </value>
            <value>
                <fullName>Cycle Cancelled</fullName>
                <label>Cancelled Cycle</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>