force-app/main/default/objects/Case/fields/Sub_Status_Text_Field__c.field-meta.xml
<CustomField>
    <fullName>Sub_Status_Text_Field__c</fullName>
    <formula>TEXT(Sub_Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sub Status Text Field</label>
    <type>Text</type>
</CustomField>