force-app/main/default/objects/Case/fields/SURR__c.field-meta.xml
<CustomField>
    <fullName>SURR__c</fullName>
    <defaultValue>&quot;N&quot;</defaultValue>
    <description>This data item captures whether the cycle was a planned part of a surrogacy arrangement.</description>
    <label>ANZARD - Surrogacy arrangement</label>
    <length>1</length>
    <type>Text</type>
</CustomField>