force-app/main/default/objects/Case/fields/TEST__c.field-meta.xml
<CustomField>
    <fullName>TEST__c</fullName>
    <formula>Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TEST</label>
    <type>Text</type>
</CustomField>