force-app/main/default/objects/Case/fields/Theatre_Weighting__c.field-meta.xml
<CustomField>
    <fullName>Theatre_Weighting__c</fullName>
    <label>Theatre Weighting</label>
    <precision>2</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>