force-app/main/default/objects/Case/fields/Today_s_Date__c.field-meta.xml
<CustomField>
    <fullName>Today_s_Date__c</fullName>
    <formula>RIGHT(&quot;0&quot; &amp; TEXT(DAY(TODAY())), 2) &amp; &quot;/&quot; &amp; RIGHT(&quot;0&quot; &amp; TEXT(MONTH(TODAY())), 2) &amp; &quot;/&quot; &amp; TEXT(YEAR(TODAY()))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Today&apos;s Date</label>
    <type>Text</type>
</CustomField>