force-app/main/default/objects/Case/fields/Total_Cycles_from_Contact__c.field-meta.xml
<CustomField>
    <fullName>Total_Cycles_from_Contact__c</fullName>
    <formula>Contact.Count_of_Cycles__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Cycles from Contact</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>