force-app/main/default/objects/Case/fields/Total_Embryos_Thawed_in_Cycle__c.field-meta.xml
<CustomField>
    <fullName>Total_Embryos_Thawed_in_Cycle__c</fullName>
    <label>Total Embryos Thawed in Cycle</label>
    <summarizedField>Cycle_Event__c.Number_of_Embryos_Thawed__c</summarizedField>
    <summaryForeignKey>Cycle_Event__c.Cycle__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>